--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start",
+    "start": "npx react-native start",
+    "startc": "yarn start --reset-cache",
+    "ios": "npx react-native run-ios",
+    "android": "npx react-native run-android",
     "test": "jest",
     "lint": "eslint ."
   },
