--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "ios": "npx react-native run-ios",
     "android": "npx react-native run-android",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "storybook": "start-storybook -p 7007",
+    "start-story": "SHOW_STORYBOOK=1 yarn start",
+    "start-storyc": "SHOW_STORYBOOK=1 yarn startc"
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.3",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "react": "16.9.0",
     "react-native": "0.61.4"
   },
@@ -19,10 +23,17 @@
     "@babel/core": "^7.7.2",
     "@babel/runtime": "^7.7.2",
     "@react-native-community/eslint-config": "^0.0.5",
+    "@storybook/addon-actions": "^5.2.6",
+    "@storybook/addon-links": "^5.2.6",
+    "@storybook/addons": "^5.2.6",
+    "@storybook/react-native": "^5.2.6",
+    "@storybook/react-native-server": "^5.2.6",
     "babel-jest": "^24.9.0",
+    "babel-loader": "^8.0.6",
     "eslint": "^6.6.0",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.57.0",
+    "react-dom": "16.9.0",
     "react-test-renderer": "16.9.0",
     "reactotron-react-native": "^4.0.2"
   },
