--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "react": "16.9.0",
     "react-native": "0.61.4",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^1.0.0-alpha.23",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3"
   },
